// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TextBox should match snapshot with additional, optional props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="textarea-wrapper textarea-wrapper--preview"
      >
        <div
          class=""
        >
          <div
            aria-live="polite"
            class="sr-only"
            role="alert"
          />
          <div>
            <div>
              <textarea
                aria-label="placeholder text"
                autocomplete="off"
                class="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
                data-testid="someid"
                dir="auto"
                disabled=""
                height="0"
                id="someid"
                role="textbox"
                rows="1"
                spellcheck="true"
                style="visibility: hidden;"
              >
                some test text
              </textarea>
              <div
                style="height: 0px; overflow: hidden;"
              >
                <textarea
                  aria-hidden="true"
                  autocomplete="off"
                  class="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
                  dir="auto"
                  disabled=""
                  id="someid-reference"
                  rows="1"
                  spellcheck="true"
                  style="visibility: hidden;"
                >
                  some test text
                </textarea>
                <div
                  id="someid-measuring"
                  style="width: auto; display: inline-block;"
                >
                  some test text
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="form-control custom-textarea textbox-preview-area"
          tabindex="0"
        >
          <p>
            some test text
          </p>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="textarea-wrapper textarea-wrapper--preview"
    >
      <div
        class=""
      >
        <div
          aria-live="polite"
          class="sr-only"
          role="alert"
        />
        <div>
          <div>
            <textarea
              aria-label="placeholder text"
              autocomplete="off"
              class="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
              data-testid="someid"
              dir="auto"
              disabled=""
              height="0"
              id="someid"
              role="textbox"
              rows="1"
              spellcheck="true"
              style="visibility: hidden;"
            >
              some test text
            </textarea>
            <div
              style="height: 0px; overflow: hidden;"
            >
              <textarea
                aria-hidden="true"
                autocomplete="off"
                class="form-control custom-textarea custom-textarea--emoji-picker bad-connection custom-textarea--preview"
                dir="auto"
                disabled=""
                id="someid-reference"
                rows="1"
                spellcheck="true"
                style="visibility: hidden;"
              >
                some test text
              </textarea>
              <div
                id="someid-measuring"
                style="width: auto; display: inline-block;"
              >
                some test text
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="form-control custom-textarea textbox-preview-area"
        tabindex="0"
      >
        <p>
          some test text
        </p>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/TextBox should match snapshot with required props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="textarea-wrapper"
      >
        <div
          class=""
        >
          <div
            aria-live="polite"
            class="sr-only"
            role="alert"
          />
          <div>
            <div>
              <textarea
                aria-label="placeholder text"
                autocomplete="off"
                class="form-control custom-textarea"
                data-testid="someid"
                dir="auto"
                height="0"
                id="someid"
                role="textbox"
                rows="1"
                spellcheck="true"
                style="visibility: visible;"
              >
                some test text
              </textarea>
              <div
                style="height: 0px; overflow: hidden;"
              >
                <textarea
                  aria-hidden="true"
                  autocomplete="off"
                  class="form-control custom-textarea"
                  dir="auto"
                  disabled=""
                  id="someid-reference"
                  rows="1"
                  spellcheck="true"
                  style="visibility: visible;"
                >
                  some test text
                </textarea>
                <div
                  id="someid-measuring"
                  style="width: auto; display: inline-block;"
                >
                  some test text
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="textarea-wrapper"
    >
      <div
        class=""
      >
        <div
          aria-live="polite"
          class="sr-only"
          role="alert"
        />
        <div>
          <div>
            <textarea
              aria-label="placeholder text"
              autocomplete="off"
              class="form-control custom-textarea"
              data-testid="someid"
              dir="auto"
              height="0"
              id="someid"
              role="textbox"
              rows="1"
              spellcheck="true"
              style="visibility: visible;"
            >
              some test text
            </textarea>
            <div
              style="height: 0px; overflow: hidden;"
            >
              <textarea
                aria-hidden="true"
                autocomplete="off"
                class="form-control custom-textarea"
                dir="auto"
                disabled=""
                id="someid-reference"
                rows="1"
                spellcheck="true"
                style="visibility: visible;"
              >
                some test text
              </textarea>
              <div
                id="someid-measuring"
                style="width: auto; display: inline-block;"
              >
                some test text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/TextBox should throw error when new property is too long 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="textarea-wrapper"
      >
        <div
          class=""
        >
          <div
            aria-live="polite"
            class="sr-only"
            role="alert"
          />
          <div>
            <div>
              <textarea
                aria-label="placeholder text"
                autocomplete="off"
                class="form-control custom-textarea"
                data-testid="someid"
                dir="auto"
                height="0"
                id="someid"
                role="textbox"
                rows="1"
                spellcheck="true"
                style="visibility: visible;"
              >
                some test text that exceeds char limit
              </textarea>
              <div
                style="height: 0px; overflow: hidden;"
              >
                <textarea
                  aria-hidden="true"
                  autocomplete="off"
                  class="form-control custom-textarea"
                  dir="auto"
                  disabled=""
                  id="someid-reference"
                  rows="1"
                  spellcheck="true"
                  style="visibility: visible;"
                >
                  some test text that exceeds char limit
                </textarea>
                <div
                  id="someid-measuring"
                  style="width: auto; display: inline-block;"
                >
                  some test text that exceeds char limit
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="textarea-wrapper"
    >
      <div
        class=""
      >
        <div
          aria-live="polite"
          class="sr-only"
          role="alert"
        />
        <div>
          <div>
            <textarea
              aria-label="placeholder text"
              autocomplete="off"
              class="form-control custom-textarea"
              data-testid="someid"
              dir="auto"
              height="0"
              id="someid"
              role="textbox"
              rows="1"
              spellcheck="true"
              style="visibility: visible;"
            >
              some test text that exceeds char limit
            </textarea>
            <div
              style="height: 0px; overflow: hidden;"
            >
              <textarea
                aria-hidden="true"
                autocomplete="off"
                class="form-control custom-textarea"
                dir="auto"
                disabled=""
                id="someid-reference"
                rows="1"
                spellcheck="true"
                style="visibility: visible;"
              >
                some test text that exceeds char limit
              </textarea>
              <div
                id="someid-measuring"
                style="width: auto; display: inline-block;"
              >
                some test text that exceeds char limit
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/TextBox should throw error when value is too long 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="textarea-wrapper"
      >
        <div
          class=""
        >
          <div
            aria-live="polite"
            class="sr-only"
            role="alert"
          />
          <div>
            <div>
              <textarea
                aria-label="placeholder text"
                autocomplete="off"
                class="form-control custom-textarea"
                data-testid="someid"
                dir="auto"
                height="0"
                id="someid"
                role="textbox"
                rows="1"
                spellcheck="true"
                style="visibility: visible;"
              >
                some test text that exceeds char limit
              </textarea>
              <div
                style="height: 0px; overflow: hidden;"
              >
                <textarea
                  aria-hidden="true"
                  autocomplete="off"
                  class="form-control custom-textarea"
                  dir="auto"
                  disabled=""
                  id="someid-reference"
                  rows="1"
                  spellcheck="true"
                  style="visibility: visible;"
                >
                  some test text that exceeds char limit
                </textarea>
                <div
                  id="someid-measuring"
                  style="width: auto; display: inline-block;"
                >
                  some test text that exceeds char limit
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      ,
    </div>
  </body>,
  "container": <div>
    <div
      class="textarea-wrapper"
    >
      <div
        class=""
      >
        <div
          aria-live="polite"
          class="sr-only"
          role="alert"
        />
        <div>
          <div>
            <textarea
              aria-label="placeholder text"
              autocomplete="off"
              class="form-control custom-textarea"
              data-testid="someid"
              dir="auto"
              height="0"
              id="someid"
              role="textbox"
              rows="1"
              spellcheck="true"
              style="visibility: visible;"
            >
              some test text that exceeds char limit
            </textarea>
            <div
              style="height: 0px; overflow: hidden;"
            >
              <textarea
                aria-hidden="true"
                autocomplete="off"
                class="form-control custom-textarea"
                dir="auto"
                disabled=""
                id="someid-reference"
                rows="1"
                spellcheck="true"
                style="visibility: visible;"
              >
                some test text that exceeds char limit
              </textarea>
              <div
                id="someid-measuring"
                style="width: auto; display: inline-block;"
              >
                some test text that exceeds char limit
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
